Fixed width of the original description field stretching the interface too much

--- a/crm/static/css/crm.css
+++ b/crm/static/css/crm.css
@@ -22,3 +22,6 @@ h2 {
     vertical-align:middle;
     border-radius: 100px;
 }
+.project-description {
+    max-width: 1000px;
+}
